<resources>
    <string name="app_name">Quiz</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="icon_of_app">icon of app</string>
    <string name="set_up_your_account">Set up your account</string>
    <string name="next">next</string>
    <string name="email">Email</string>
    <string name="signup">signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here"> Login here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup_here">Signup here</string>
    <string name="user_not_found">User not found</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="username_must_contain_letter_and_digits_only">Username must contain letters and digits only</string>
    <string name="username_must_have_at_least_5_characters">Username must have at least 5 characters</string>
    <string name="password_must_have_at_least_5_characters">Password must have at least 5 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_input">Invalid input</string>
    <string name="username_already_taken">This username is already taken</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="play">play</string>
    <string name="background_of_quiz">background of quiz</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="aptitude_test_background_image">Aptitude test background image</string>
    <string name="aptitude">Aptitude</string>
    <string name="reasoning">Reasoning</string>
    <string name="verbal_ability">Verbal Ability</string>
    <string name="choose_a_quiz_category">Choose a Quiz category</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username_or_email">Username or email</string>
    <string name="submit">submit</string>
    <string name="clear_response">Clear Response</string>
    <string name="restart">restart</string>
    <string name="new_quiz">new quiz</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="_0">0</string>
    <string name="unattempted">Unattempted</string>
    <string name="result_image">result image</string>
    <string name="exit">exit</string>
    <string name="end_quiz_button">End quiz button</string>
</resources>