<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/iv_exit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_baseline_exit_to_app_24" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/result_image"
        android:src="@drawable/results_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_result_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?attr/colorSurface"
        android:elevation="@dimen/horizontal_margin"
        app:cardElevation="@dimen/horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/correct"
                    android:textSize="@dimen/subtitle_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/incorrect"
                    android:textSize="@dimen/subtitle_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/unattempted"
                    android:textSize="@dimen/subtitle_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_correct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/green"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_incorrect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/red"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_unattempted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_result"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:progress="50"
                android:progressBackgroundTint="@color/red"
                android:progressTint="@color/green"
                app:layout_constraintTop_toBottomOf="@id/cv_result_board" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_play_again"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="?attr/colorPrimaryVariant"
                    android:text="@string/restart"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_new_quiz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/new_quiz"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>